--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit==1.24.0
 pandas==1.5.0
-numpy==1.23.0
+numpy==1.24.3  # 更新為較新的版本
 plotly==5.5.0
-openpyxl  # Required for handling Excel files in .xlsx format
+openpyxl  # 用於處理 .xlsx 格式的 Excel 文件
+setuptools  # 用於確保 distutils 可用
