--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ plotly==5.5.0
 openpyxl  # 用於處理 .xlsx 格式的 Excel 文件
 setuptools>=65.5.0  # 安裝較新的 setuptools，提供 distutils 支持
 wheel  # 安裝 wheel 以加速包安裝
+pip>=24.3.1
